--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bare-bones single-machine map-reduce engine written in node ",
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
+    "test": "NODE_ENV=development mocha --reporter spec integration-test.js --require @babel/register",
     "start": "node index.js"
   },
   "repository": {
@@ -24,14 +24,18 @@
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "convict": "^4.4.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "joi": "^14.0.2",
     "lodash": "^4.17.11",
+    "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "node-redis": "^0.1.7",
     "redis": "^2.8.0",
-    "redlock": "^3.1.2"
+    "redlock": "^3.1.2",
+    "supertest": "^3.3.0"
   }
 }
